# Noxam

./: .gitignore  CMakeLists.txt  NoxamEngine.cxx  NoxamStartUp.cxx  NoxamXor.cxx  README.md  main.cpp
Attack/: NoxamAttakFlood.cxx
CNC/: NoxamPELSAdmin.cxx
Config/: NoxamCommand.cxx
Crypto/: NoxamStringOperations.cxx  NoxamURLEncoding.cxx  NoxamWebSafeEncryption.cxx
Engine/: NoxamEngine.cxx  NoxamHeader.hxx  NoxamMain.hxx  NoxamStartUp.cxx  NoxamStartUp.hxx  NoxamXor.cxx  NoxamXor.hxx
Engine/Attack/: NoxamAttakFlood.cxx
Engine/CNC/: NoxamPELSAdmin.cxx
Engine/Crypto/: NoxamStringOperations.cxx  NoxamStringOprations.hxx  NoxamURLEncoding.cxx  NoxamWebSafeEncryption.cxx
Engine/Net/: NoxamHTTP.cxx  NoxamHTTP.hxx  NoxamNetINIT.cxx  NoxamNetINIT.hxx  NoxamSocket.cxx  NoxamSocket.hxx
Engine/SystemX/: NoxamOSGPUChecker.hxx  NoxamOSGetRAM.hxx  NoxamOSVersionChecker.hxx
Engine/Temperature/: NoxamOSCPUChecker.cxx  NoxamOSGPUChecker.cxx  NoxamOSGetRAM.cxx  NoxamOSHWidChecker.cxx  NoxamOSNetVersionChecker.cxx  NoxamOSVersionChecker.cxx  NoxamWebSiteChecker.cxx
Engine/Utils/: NoxamDownloadExecute.cxx  NoxamDownloadExecute.hxx  NoxamGateHelper.cxx  NoxamGateHelper.hxx  NoxamKeylogger.cxx  NoxamKeylogger.hxx  NoxamProccess.cxx  NoxamProccess.hxx  NoxamScreenshot.cxx  NoxamScreenshot.hxx  NoxamSealer.cxx
Headers/: NoxamAgressiveOptimize.hxx  NoxamMain.hxx  NoxamXor.hxx
Headers/Attack/: NoxamAttackFlood.hxx
Headers/CNC/: NoxamPELSAdmin.hxx
Headers/Config/: NoxamCommand.hxx
Headers/Crypto/: NoxamStringOprations.hxx  NoxamURLEncoding.hxx  NoxamWebSafeEncryption.hxx
Headers/Net/: NoxamHTTP.hxx  NoxamNetINIT.hxx  NoxamSocket.hxx
Headers/SystemX/: NoxamOSCPUChecker.hxx  NoxamOSGPUChecker.hxx  NoxamOSGetRAM.hxx  NoxamOSHWidChecker.hxx  NoxamOSNetVersionChecker.hxx  NoxamOSVersionChecker.hxx  NoxamWebSiteChecker.hxx
Headers/Utils/: NoxamDownloadExecute.hxx  NoxamGate.hxx  NoxamGateHelper.hxx  NoxamKeylogger.hxx  NoxamProccess.hxx  NoxamScreenshot.hxx  NoxamStealer.hxx
Net/: NoxamHTTP.cxx  NoxamNetINIT.cxx  NoxamSocket.cxx
Temperature/: NoxamOSCPUChecker.cxx  NoxamOSGPUChecker.cxx  NoxamOSGetRAM.cxx  NoxamOSHWidChecker.cxx  NoxamOSNetVersionChecker.cxx  NoxamOSVersionChecker.cxx  NoxamWebSiteChecker.cxx
Utils/: NoxamDownloadExecute.cxx  NoxamGateHelper.cxx  NoxamKeylogger.cxx  NoxamProccess.cxx  NoxamScreenshot.cxx  NoxamSealer.cxx
